non-trivial-VUMPS finished left MC verify

--- a/J1-J2-VUMPS.ipynb
+++ b/J1-J2-VUMPS.ipynb
@@ -57,9 +57,7 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "code_folding": [
-     0
-    ]
+    "code_folding": []
    },
    "outputs": [
     {
@@ -128,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {
     "code_folding": [],
     "scrolled": true
@@ -138,18 +136,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "norm(M1 .- M2) = 0.3814332186839686\n",
-      "norm(ME1 .- ME2) = 3.946340497228588\n",
-      "norm(ME3 .- ME4) = 0.04991677728072043\n"
+      "norm(M1 .- M2) = 0.0\n",
+      "norm(ME1 .- ME2) = 0.0\n",
+      "norm(ME3 .- ME4) = 0.0\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "0.04991677728072043"
+       "0.0"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -158,7 +156,7 @@
     "#test\n",
     "βc = log(1+sqrt(2))/2\n",
     "β = 0.1\n",
-    "M1, M2, ME1, ME2, ME3, ME4,λM1,λM2= classicalisingmpo(β; r = 100.0)\n",
+    "M1, M2, ME1, ME2, ME3, ME4,λM1,λM2= classicalisingmpo(β; r = 1.0)\n",
     "@show norm(M1.-M2) norm(ME1.-ME2) norm(ME3.-ME4)"
    ]
   },
@@ -206,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 13,
    "metadata": {
     "code_folding": [
      0
@@ -219,7 +217,7 @@
        "rightorth"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -369,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {
     "code_folding": []
    },
@@ -392,7 +390,7 @@
        "2"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -434,11 +432,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 15,
    "metadata": {
-    "code_folding": [
-     0
-    ]
+    "code_folding": []
    },
    "outputs": [
     {
@@ -447,7 +443,7 @@
        "rightenv4 (generic function with 2 methods)"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -516,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 16,
    "metadata": {
     "code_folding": [
      0
@@ -527,27 +523,27 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "norm(X1 .- FL1 * λL1) = 1.340327280587461e-13\n",
-      "norm(X2 .- FL2 * λL2) = 1.5119286381886108e-13\n",
-      "norm(X3 .- FR1 * λR1) = 6.123212589407099e-13\n",
-      "norm(X4 .- FR2 * λR2) = 6.073466347644652e-13\n",
-      "norm(FL1 .- FL2) = 1.7897834205856333\n",
-      "norm(FR1 .- FR2) = 1.096446458703829\n",
-      "norm(X5 .- FL3 * λL3) = 4.511062163528145e-13\n",
-      "norm(X6 .- FL4 * λL4) = 3.510677034331945e-13\n",
-      "norm(X7 .- FR3 * λR3) = 5.683831580597302e-13\n",
-      "norm(X8 .- FR4 * λR4) = 1.5542844894026136e-13\n",
-      "norm(FL3 .- FL4) = 1.4300544943449132\n",
-      "norm(FR3 .- FR4) = 0.2260574619751089\n"
+      "norm(X1 .- FL1 * λL1) = 6.869306463957957e-14\n",
+      "norm(X2 .- FL2 * λL2) = 6.860666968163123e-14\n",
+      "norm(X3 .- FR1 * λR1) = 4.857550008463539e-14\n",
+      "norm(X4 .- FR2 * λR2) = 4.849512680928234e-14\n",
+      "norm(FL1 .- FL2) = 2.1735962338149917e-16\n",
+      "norm(FR1 .- FR2) = 2.219828466811135e-15\n",
+      "norm(X5 .- FL3 * λL3) = 4.77009362697606e-14\n",
+      "norm(X6 .- FL4 * λL4) = 4.768257604163388e-14\n",
+      "norm(X7 .- FR3 * λR3) = 1.3466727712592975e-14\n",
+      "norm(X8 .- FR4 * λR4) = 1.343196170846867e-14\n",
+      "norm(FL3 .- FL4) = 1.1092460291407971e-15\n",
+      "norm(FR3 .- FR4) = 3.552630160355971e-15\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "0.2260574619751089"
+       "3.552630160355971e-15"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -586,20 +582,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 17,
    "metadata": {
-    "code_folding": [
-     0
-    ]
+    "code_folding": []
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "energy (generic function with 2 methods)"
+       "energy (generic function with 1 method)"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -620,7 +614,7 @@
     "    @tensor Z24 = scalar(FL4[α,a,b,β]*AC2[β,s,β']*M2[b,c,b',s]*\n",
     "        M2[a,s',a',c]*FR4[β',b',a',α']*conj(AC2[α,s',α']))\n",
     "\n",
-    "#     @show Z21 Z22\n",
+    "    @show Z21 Z22 Z23 Z24\n",
     "    @tensor e1 = scalar(FL1[α,c,β]*AAC1[β,s1,s2,β']*ME1[c,t1,t2,c',s2,s1]*\n",
     "        FR2[β',c',α']*conj(AAC1[α,t1,t2,α']) / Z21)\n",
     "    @tensor e2 = scalar(FL2[α,c,β]*AAC2[β,s1,s2,β']*ME2[c,t1,t2,c',s2,s1]*\n",
@@ -629,7 +623,7 @@
     "        FR3[β',b',a',α']*conj(AC1[α,s',α']) / Z23)\n",
     "    @tensor e4 = scalar(FL4[α,a,b,β]*AC2[β,s,β']*ME4[b,a,s',a',b',s]*\n",
     "        FR4[β',b',a',α']*conj(AC2[α,s',α']) / Z24)\n",
-    "#     @show e1 e2 e3 e4\n",
+    "    @show e1 e2 e3 e4\n",
     "    return (e1+e2+e3+e4)/2/λM1^2*λM2\n",
     "#     return e1,e2,e3,e4\n",
     "end"
@@ -637,7 +631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 18,
    "metadata": {
     "code_folding": []
    },
@@ -646,16 +640,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "e = -51.40445296724066 - 2.36222964355617e-13im\n"
+      "Z21 = -5.482037950967722e-7 + 8.539086029432694e-5im\n",
+      "Z22 = -5.482037950967638e-7 + 8.539086029432664e-5im\n",
+      "Z23 = 9.387741508174343e-5 - 9.932484535492305e-5im\n",
+      "Z24 = 9.38774150817432e-5 - 9.932484535492278e-5im\n",
+      "e1 = -0.3230748219868762 - 8.874845303097345e-15im\n",
+      "e2 = -0.32307482198687665 - 9.01362318117549e-15im\n",
+      "e3 = -0.3862460361070341 + 4.496403249731884e-15im\n",
+      "e4 = -0.38624603610703423 + 4.427014310692812e-15im\n",
+      "e = -0.1943063916428734 - 1.227911653823743e-15im\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "-51.40445296724066 - 2.36222964355617e-13im"
+       "-0.1943063916428734 - 1.227911653823743e-15im"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -687,11 +689,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 19,
    "metadata": {
-    "code_folding": [
-     0
-    ]
+    "code_folding": []
    },
    "outputs": [
     {
@@ -700,7 +700,7 @@
        "vumps (generic function with 1 method)"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -825,7 +825,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 20,
    "metadata": {
     "code_folding": []
    },
@@ -834,42 +834,44 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Starting point has λL1 = 0.2842140625620016 - 7.494005416219807e-16im ,λL2 =  0.28421406256200443 + 1.1934897514720433e-15im\n",
-      "                        λR1 = 0.28421406256200515 + 1.1934897514720433e-15im ,λR2 =  0.28421406256200105 + 5.828670879282072e-16im\n",
+      "Starting point has λL1 = 0.34824251833168923 + 3.247402347028583e-15im ,λL2 =  0.3482425183316857 + 2.4924720619592253e-15im\n",
+      "                        λR1 = 0.3482425183316921 + 2.1649348980190553e-15im ,λR2 =  0.3482425183316943 + 2.5713965246507785e-15im\n",
       "Step 1: \n",
-      "                                    λ1 * λ2 = 0.7875285815425366 + 1.0547118733938987e-15im,\n",
-      "                                    λL1 = 0.7871076445182923 - 5.551115123125783e-17im,\n",
-      "                                    λL2 = 0.7871076445182863 - 2.7755575615628914e-17im, \n",
-      "                                    err1 ≈ 0.00827547914981898, \n",
-      "                                    err2 ≈ 0.009260727437554213\n",
+      "                                    λ1 * λ2 = 0.9439152607657231 + 8.621598472227351e-17im,\n",
+      "                                    λL1 = 0.9438456990339427 - 5.551115123125783e-16im,\n",
+      "                                    λL2 = 0.9438456990339469 - 2.8541622190680904e-17im, \n",
+      "                                    err1 ≈ 0.0016224865014241522, \n",
+      "                                    err2 ≈ 0.0016267786542707198\n",
       "Step 2: \n",
-      "                                        λ1 * λ2 = 0.7874099073806956 - 1.0547118733938987e-15im,\n",
-      "                                        λL1 = 0.7874099076035438 + 1.1102230246251565e-16im,\n",
-      "                                        λL2 = 0.7874099076035401 + 5.551115123125783e-17im, \n",
-      "                                        err1 ≈ 7.2835453253176075e-6, \n",
-      "                                        err2 ≈ 6.187003824048548e-6\n",
+      "                                        λ1 * λ2 = 0.94385251237285 + 7.771561172376096e-16im,\n",
+      "                                        λL1 = 0.9438525123728466 + 1.1102230246251565e-16im,\n",
+      "                                        λL2 = 0.9438525123728528 - 2.7755575615628914e-16im, \n",
+      "                                        err1 ≈ 6.25385231682148e-9, \n",
+      "                                        err2 ≈ 5.912325072371372e-9\n",
       "Step 3: \n",
-      "                                        λ1 * λ2 = 0.7874099077086121 + 6.106226635438361e-16im,\n",
-      "                                        λL1 = 0.7874099077086111 + 1.6653345369377348e-16im,\n",
-      "                                        λL2 = 0.7874099077086113 - 5.551115123125783e-17im, \n",
-      "                                        err1 ≈ 1.8808940229099856e-12, \n",
-      "                                        err2 ≈ 1.8196624053363846e-12\n",
-      "Step 4: \n",
-      "                                        λ1 * λ2 = 0.7874099077086141 - 5.551115123125783e-17im,\n",
-      "                                        λL1 = 0.7874099077086057 + 0.0im,\n",
-      "                                        λL2 = 0.7874099077086064 + 7.216449660063518e-16im, \n",
-      "                                        err1 ≈ 2.551387696339287e-15, \n",
-      "                                        err2 ≈ 1.4385864925655656e-15\n",
-      "eMPS = -50.255421510978316 + 3.7129993183875266e-17im\n"
+      "                                        λ1 * λ2 = 0.9438525123728512 + 5.551115123125783e-17im,\n",
+      "                                        λL1 = 0.9438525123728493 + 0.0im,\n",
+      "                                        λL2 = 0.9438525123728494 + 8.326672684688674e-17im, \n",
+      "                                        err1 ≈ 1.7234931368138282e-15, \n",
+      "                                        err2 ≈ 1.1653703145029639e-14\n",
+      "Z21 = 0.9438525123728496 + 2.4136058837589665e-16im\n",
+      "Z22 = 0.9438525123728498 - 1.5389567083554134e-17im\n",
+      "Z23 = 0.27621872052191193 + 0.882386640466805im\n",
+      "Z24 = 0.8097619888863017 + 0.4462891958157905im\n",
+      "e1 = -0.3712173962738721 + 2.1183764615238018e-19im\n",
+      "e2 = -0.37121739627387224 - 7.345628537266903e-19im\n",
+      "e3 = -0.3712173962738717 - 3.068969774491781e-17im\n",
+      "e4 = -0.37121739627387185 + 3.440309018568066e-17im\n",
+      "eMPS = -0.20337739109735598 + 4.370145258945252e-19im\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "-50.255421510978316 + 3.7129993183875266e-17im"
+       "-0.20337739109735598 + 4.370145258945252e-19im"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1159,36 +1161,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1.64 * sqrt(var(eMC) / 20) = 6.964584718860807e-5\n",
-      "mean(eMC) - real(eMPS) = -0.04123167665513261\n",
-      "mean(eMC) = -4.052562875683593\n",
-      "real(eMPS) = -4.011331199028461\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "-4.011331199028461"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "@show 1.64*sqrt(var(eMC)/20) mean(eMC) - real(eMPS) mean(eMC) real(eMPS)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 30,
    "metadata": {
     "code_folding": [
@@ -1265,6 +1237,36 @@
     "legend(loc=\"best\")\n",
     "xlabel(\"lattice\")\n",
     "ylabel(\"energy\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.64 * sqrt(var(eMC) / 20) = 6.964584718860807e-5\n",
+      "mean(eMC) - real(eMPS) = -0.04123167665513261\n",
+      "mean(eMC) = -4.052562875683593\n",
+      "real(eMPS) = -4.011331199028461\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "-4.011331199028461"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "@show 1.64*sqrt(var(eMC)/20) mean(eMC) - real(eMPS) mean(eMC) real(eMPS)"
    ]
   },
   {
@@ -1731,7 +1733,7 @@
     "height": "calc(100% - 180px)",
     "left": "10px",
     "top": "150px",
-    "width": "255.977px"
+    "width": "255.973px"
    },
    "toc_section_display": true,
    "toc_window_display": true
