--- a/J1-J2-VUMPS - Transpose.ipynb
+++ b/J1-J2-VUMPS - Transpose.ipynb
@@ -507,9 +507,7 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {
-    "code_folding": [
-     0
-    ]
+    "code_folding": []
    },
    "outputs": [
     {
@@ -557,9 +555,7 @@
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {
-    "code_folding": [
-     0
-    ]
+    "code_folding": []
    },
    "outputs": [
     {
